--- a/src/style.less
+++ b/src/style.less
@@ -36,7 +36,7 @@
 
   .json-formatter-string, .json-formatter-stringifiable {
     color: @string-color;
-    white-space: pre;
+    white-space: pre-wrap;
     word-wrap: break-word;
   }
   .json-formatter-number { color: @number-color; }
@@ -44,7 +44,6 @@
   .json-formatter-null { color: @null-color; }
   .json-formatter-undefined { color: @undefined-color; }
   .json-formatter-function { color: @function-color; }
-  .json-formatter-date { background-color: fade(@default-color, 5%); }
   .json-formatter-url {
     text-decoration: underline;
     color: @url-color;
@@ -112,7 +111,7 @@
 .json-formatter-dark.json-formatter-row {
   .theme(
     @default-color: white,
-    @string-color: #31F031,
+    @string-color: #c0c7c7,
     @number-color: #66C2FF,
     @boolean-color: #EC4242,
     @null-color: #EEC97D,
@@ -125,3 +124,8 @@
     @key-color: #23A0DB,
     @url-color: #027BFF);
 }
+
+.grep-highlight {
+  color: #ff6e67;
+}
+
